src/objects/Dwolla_API_Log__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Stack_Trace_String__c</fullName>
        <label>Exception Stack Trace String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Headers__c</fullName>
        <label>Headers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsError__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsError</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Dwolla API Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DAL-{000000}</displayFormat>
        <label>Dwolla API Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dwolla API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>